部分bug修复